# elb-log-analyzer

./: .gitignore  Dockerfile  README.md  docker-workflow.sh  pyproject.toml
dashboard/: app.py  utils.py
elb_log_analyzer/: __main__.py  alerts.py  log_analyzer.py  s3_log.py  utils.py
frontend/: index.html
frontend/static/css/: main.css
frontend/static/js/: utils.js
