[tool.poetry]
name = "elb-log-analyzer"
version = "0.3.0"
description = "AWB ELB log analyzer"
authors = ["Dhrumil Mistry <56185972+dmdhrumilmistry@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "elb_log_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.17.0"
pandas = "^1.5.3"
boto3 = "^1.26.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
