[tool.poetry]
name = "elb-log-analyzer"
version = "0.5.2"
description = "AWB ELB log analyzer"
authors = ["Dhrumil Mistry <56185972+dmdhrumilmistry@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "elb_log_analyzer"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.17.0"
pandas = "^1.5.3"
boto3 = "^1.26.84"
requests = "^2.28.2"
ipapi = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
